--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Dom Array Methods 2020</title>
 </head>
 <body>
-   
+   <h1>Dom Array Methods 2020</h1>
+
+   <div class="container">
+        <aside>
+        <button id="add-user">Add User 👱‍♂️</button>
+        <button id="double">Double Money 💰</button>
+        <button id="show-millionaires">Show Only Millionaires 💵</button>
+        <button id="sort">Sort by Richest ↓</button>
+        <button id="calculate-wealth">Calculate entire Wealth 🧮</button>
+        </aside>
+
+        <main id="main">
+        <h2><strong>Person</strong> Wealth</h2>
+        </main>
+   </div>
+
     <script src="app.js"></script>
 </body>
 </html>
